unpackaged/main/default/objects/sfsp__SalesPlan__c/sfsp__SalesPlan__c.object-meta.xml
<CustomObject>
    <label>Sales Plan</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>