unpackaged/main/default/objects/sfsp__SalesPlan__c/fields/sfsp__AssignmentBehavior__c.field-meta.xml
<CustomField>
    <fullName>sfsp__AssignmentBehavior__c</fullName>
    <label>Assignment Behavior</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Exclusive</fullName>
            </value>
            <value>
                <fullName>Non-Exclusive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>