unpackaged/main/default/objects/sfsp__SalesPlan__c/fields/sfsp__HierarchyReference__c.field-meta.xml
<CustomField>
    <fullName>sfsp__HierarchyReference__c</fullName>
    <description>JSON array of imported hierarchy reference fields columns</description>
    <label>Hierarchy Reference</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>