unpackaged/main/default/objects/sfsp__SalesPlan__c/fields/sfsp__Parent__c.field-meta.xml
<CustomField>
    <fullName>sfsp__Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>sfsp__SalesPlan__c</referenceTo>
    <relationshipLabel>Scenarios</relationshipLabel>
    <relationshipName>Scenarios</relationshipName>
    <type>Lookup</type>
</CustomField>