unpackaged/main/default/objects/sfsp__SalesPlan__c/fields/sfsp__Period__c.field-meta.xml
<CustomField>
    <fullName>sfsp__Period__c</fullName>
    <label>Period</label>
    <length>18</length>
    <type>Text</type>
</CustomField>