unpackaged/main/default/objects/sfsp__SalesPlan__c/fields/sfsp__ReferenceFields__c.field-meta.xml
<CustomField>
    <fullName>sfsp__ReferenceFields__c</fullName>
    <description>JSON array of reference fields</description>
    <label>Reference Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>