unpackaged/main/default/objects/sfsp__SalesPlan__c/fields/sfsp__SalesDataSource__c.field-meta.xml
<CustomField>
    <fullName>sfsp__SalesDataSource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Data Source</label>
    <referenceTo>sfsp__SalesDataSource__c</referenceTo>
    <relationshipLabel>Sales Plans</relationshipLabel>
    <relationshipName>SalesPlans</relationshipName>
    <type>Lookup</type>
</CustomField>