unpackaged/main/default/objects/sfsp__SalesPlan__c/fields/sfsp__Type__c.field-meta.xml
<CustomField>
    <fullName>sfsp__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Segmentation</fullName>
                <default>true</default>
                <label>Segmentation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>